--- a/10_mini_project/index.html
+++ b/10_mini_project/index.html
@@ -6,6 +6,7 @@
     <title>Mini Project</title>
 </head>
 <body>
+    <input type="text" name="todo" id="todoInput" placeholder="Enter a todo">
     <button id="btn">Click Me</button>
     <script src="./dist/index.js"></script>
 </body>
