--- a/10_mini_project/index.html
+++ b/10_mini_project/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Project</title>
 </head>
+
 <body>
-    <input type="text" name="todo" id="todoInput" placeholder="Enter a todo">
-    <button id="btn">Click Me</button>
+    <form id="todoForm" action="/">
+        <input type="text" name="todo" id="todoInput" placeholder="Enter a todo">
+        <button id="btn">Click Me</button>
+    </form>
     <script src="./dist/index.js"></script>
 </body>
+
 </html>
