create new todo using document API

--- a/10_mini_project/index.html
+++ b/10_mini_project/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <ul id="todoList"></ul>
     <form id="todoForm" action="/">
         <input type="text" name="todo" id="todoInput" placeholder="Enter a todo">
         <button id="btn">Click Me</button>
