--- a/10_mini_project/index.html
+++ b/10_mini_project/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>ToDo List</h1>
     <ul id="todoList"></ul>
     <form id="todoForm" action="/">
         <input type="text" name="todo" id="todoInput" placeholder="Enter a todo">
