--- a/16_webpack_ts/index.html
+++ b/16_webpack_ts/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webpack TS</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script type="module" src="./dist/index.js"></script>
-</body>
-
+  </body>
 </html>
