--- a/16_webpack_ts/index.html
+++ b/16_webpack_ts/index.html
@@ -7,6 +7,6 @@
   </head>
 
   <body>
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
   </body>
 </html>
